# plate

./: .gitignore  CMakeLists.txt  README.md
example/: 3-patch-e.inp  3-patch-e.rep  3-patch-poisson.rep  3-patch.inp  3-patch.rep  3-plate.inp  3-plate.rep  plate.inp  plate.sh
example/prev/: 3-patch-poisson.inp  3-plate.rep
resource/: 3-plate.ezdraw  element.ezdraw
src/: Diagnostic.cc  Diagnostic.hh  Element.cc  Load.cc  Load.hh  Plate-2.cc  Plate.cc  Plate.hh  Point.cc  Point.hh  Report.cc  Report.hh  Shape.cc  Solution.cc  Solver.cc  Solver.hh  Support.cc  Support.hh  main.cc  main.cpp
src/prev/: Plate-2.cc  Plate-3.cc
src/prior/: Element.hh
src/tool/: Array.hh  Basic.hh  Diag.hh  Essential.cc  Essential.hh  Factory.hh  Ostring.hh  Phrase.hh  Serial.hh  Stream.hh  String.hh  Token.hh
src/tool/prev/: Array.hh
